// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > applies fullWidth 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > intent > renders intent=danger 1`] = `
<button
  style="--btn-bg: var(--color-rose-700); --btn-bg-hover: var(--color-rose-800); --btn-text: white; --btn-border: var(--color-rose-700); --btn-ghost-text: var(--color-rose-700); --btn-ghost-hover-bg: var(--color-rose-50); --btn-outline-text: var(--color-rose-700); --btn-outline-hover-text: var(--color-rose-700);"
  type="button"
>
  Label
</button>
`;

exports[`Button > intent > renders intent=primary 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > intent > renders intent=secondary 1`] = `
<button
  style="--btn-bg: light-dark(var(--color-grey-200), var(--color-grey-700)); --btn-bg-hover: light-dark(var(--color-grey-300), var(--color-grey-600)); --btn-text: light-dark(var(--color-grey-900), var(--color-grey-100)); --btn-border: light-dark(var(--color-grey-300), var(--color-grey-600)); --btn-ghost-text: light-dark(var(--color-grey-600), var(--color-grey-400)); --btn-ghost-hover-bg: light-dark(var(--color-grey-100), var(--color-grey-800)); --btn-outline-text: light-dark(var(--color-grey-700), var(--color-grey-300)); --btn-outline-hover-text: light-dark(var(--color-grey-900), var(--color-grey-100));"
  type="button"
>
  Label
</button>
`;

exports[`Button > is disabled and shows spinner when loading 1`] = `
<button
  disabled=""
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin"
    fill="none"
    height="16"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  <span>
    Save
  </span>
</button>
`;

exports[`Button > size > renders size=icon 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > size > renders size=md 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > size > renders size=sm 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > variant > renders variant=dashed 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > variant > renders variant=ghost 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > variant > renders variant=link 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > variant > renders variant=outline 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;

exports[`Button > variant > renders variant=solid 1`] = `
<button
  style="--btn-bg: var(--color-primary-700); --btn-bg-hover: var(--color-primary-800); --btn-text: white; --btn-border: var(--color-primary-700); --btn-ghost-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-ghost-hover-bg: light-dark(var(--color-primary-50), var(--color-primary-900)); --btn-outline-text: light-dark(var(--color-primary-700), var(--color-primary-400)); --btn-outline-hover-text: light-dark(var(--color-primary-700), var(--color-primary-400));"
  type="button"
>
  Label
</button>
`;
